# camvidlog

./: .gitignore  README.md  TODO.md  logging.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  install_nvidia_key.sh  post-create.sh  post-start.sh
experimental/10_grounding_dino/: run.py
experimental/1_background_subtraction/: README.md  app.py
experimental/20_split_image/: run.py
experimental/30_rembg/: run.py  run_transformers.py
experimental/40_bg_avg/: run.py
experimental/50_rtsp/: run.py  run_file.py
experimental/60_fullframe/: plot.py  run_file.py
experimental/70_florence2/: note.txt  readme.md  run_file.py
src/camvidlog/: __init__.py  app.py  config.py  cv.py  frameinfo.py  queues.py
src/camvidlog/cv/: models.py  service.py  service_owl.py
src/camvidlog/db/: models.py  service.py
src/camvidlog/procs/: ai.py  basics.py  bg.py  frame.py  manager.py  queues.py  source.py
src/camvidlog/run/: load.py  plot.py  scan.py  video.py  video_ai.py  video_ai_bg.py  video_bg.py  video_scales.py
